# Homework-27-2

./: .env  .env.sample  .gitignore  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
materials/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/fixtures/: courses.json
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_course_owner_alter_lesson_owner_subscription.py  0004_course_last_updated.py
payments/: models.py  services.py  urls.py  views.py
templates/: payment_test.html
users/: apps.py  filters.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/fixtures/: payments.json  users.json
users/migrations/: 0001_initial.py  0002_payment.py  0003_user_first_name_user_groups_user_last_name_and_more.py  0004_alter_user_options_alter_user_managers_and_more.py
