[tool.poetry]
name = "homework-26-2"
version = "0.1.0"
description = ""
authors = ["Aleksei Prusikov <imemphatic@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.4.0"
validators = "^0.34.0"
coverage = "^7.6.10"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.6.0"
requests = "^2.32.3"
stripe = "^11.4.1"
asgiref = "^3.8.1"
psycopg = "^3.2.4"
sqlparse = "^0.5.3"
typing-extensions = "^4.12.2"
celery = "^5.4.0"
redis = "^5.2.1"
django-celery-beat = "^2.7.0"
eventlet = "^0.39.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
